--- a/.github/ISSUE_TEMPLATE/GisRequest.yml
+++ b/.github/ISSUE_TEMPLATE/GisRequest.yml
@@ -1,4 +1,4 @@
-name: TEST Feature Request (e.g. New Functionality)
+name: GIS Request (e.g. New Functionality)
 description: test
 title: I Think [this cool thing] Would be a Great Addition to the Application
 labels: ["enhancement", "feature request"]
